// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Component shallow renders 1`] = `
<div
  className="sc-bdnxRM bYhsjP"
>
  <img
    alt="loading"
    src="loading.gif"
  />
</div>
`;

exports[`Loading Component shallow renders 2`] = `
<div
  className="sc-gtsrHT KCwSX"
>
  <img
    alt="loading"
    src="loading.gif"
  />
</div>
`;
